crates/core/tests/ui/typed_macro/fail/legacy_query_syntax.stderr
error: `query!` no longer accepts the old explicit-codec form `query!("...", params = ..., row = ...)`; use schema-aware typed SQL (`query!(schema = { ... }, SELECT ...)`) or an authored schema wrapper like `app_schema::query!(...)`. For unsupported statements, use `Query::raw` / `Command::raw`.
 --> tests/ui/typed_macro/fail/legacy_query_syntax.rs:5:9
  |
5 |         "SELECT name FROM users WHERE id = $1",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
